--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-
+<app-indexnavbar></app-indexnavbar>
 <div class="signup-wrapper" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <mat-card-header>
@@ -93,7 +93,7 @@
       <button mat-flat-button color="primary" class="btn-block" id = "singup-component-signup-button" (click) = "onSignupClick()">Sign up</button>
       <br />
       <br />
-      <a routerLink="">Already have an account? Login</a>
+      <a routerLink="/login">Already have an account? Login</a>
 
     </form>
   </mat-card>
