--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,46 +9,26 @@
     <form class="login-form">
       <mat-card-content>
         <mat-form-field class="login-full-width">
-          <input
-            type="text"
-            [(ngModel)]="username"
-            matInput
-            name="username"
-            ngDefaultControl
-            placeholder="Username"
-            id="username"
-          />
+          <input type="text" [(ngModel)]="username" matInput name="username" ngDefaultControl placeholder="Username"
+            id="username" />
         </mat-form-field>
 
         <mat-form-field class="login-full-width">
-          <input
-            type="text"
-            [(ngModel)]="password"
-            matInput
-            name="password"
-            ngDefaultControl
-            placeholder="Password"
-            [type]="hide ? 'password' : 'text'"
-            id="password"
-            required
-          />
+          <input type="text" [(ngModel)]="password" matInput name="password" ngDefaultControl placeholder="Password"
+            [type]="hide ? 'password' : 'text'" id="password" required />
           <mat-icon matSuffix (click)="hide = !hide">{{
             hide ? "visibility_off" : "visibility"
-          }}</mat-icon>
+            }}</mat-icon>
         </mat-form-field>
       </mat-card-content>
 
-      <div *ngIf="errorMessage" id="error-message" class="text-danger">
-        {{ errorMessage }}
+      <!-- *ngIf="errorMessage" -->
+      <div  id="error-message" class="text-danger">
+        <!-- {{ errorMessage }} -->
+        Invalid Credentials
       </div>
 
-      <button
-        mat-flat-button
-        color="primary"
-        class="btn-block"
-        id = "login-button-logincomponent"
-        (click)="onLoggedIn()"
-      >
+      <button mat-flat-button color="primary" class="btn-block" id="login-button-logincomponent" (click)="onLoggedIn()">
         Log in
       </button>
 
