adding review services

--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -91,6 +91,7 @@
     <mat-dialog-content>
       <div style="display: flex; align-items: right; justify-content: right;">
         <br>
+        <button style="background-color: rgb(160, 160, 231); color: rgb(0, 0, 0);" mat-raised-button (click)="viewBookReviews()" > Book Reviews <button>
         <button style="background-color: blue; color: burlywood;" mat-raised-button (click)="onCloseDisplayProduct()" >Cancel</button>
      </div>
     </mat-dialog-content>
