more review add-ons

--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -94,6 +94,9 @@
         <button style="background-color: rgb(160, 160, 231); color: rgb(0, 0, 0);" mat-raised-button (click)="viewBookReviews()" > Book Reviews <button>
         <button style="background-color: blue; color: burlywood;" mat-raised-button (click)="onCloseDisplayProduct()" >Cancel</button>
      </div>
+     <div *ngIf="bookReviews">
+          <app-review ></app-review>
+     </div>
     </mat-dialog-content>
 
 
