--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,9 +1,7 @@
-<div>Component works!</div>
-
 
 
 <div class="reviewcard">
-    <button mat-button mat-dialog-close>x</button>
+    <button class="closedia" mat-button mat-dialog-close>x</button>
     <h2 ></h2>
   
     <div class="mat-typography">
@@ -22,8 +20,8 @@
             <textarea name="fieldName" ngDefaultControl matInput id="revtext" [(ngModel)]='review.reviewText'></textarea>
             <br>
   
-
-            
+<mat-label for="rating">Rating: </mat-label>       
+       <mat-slider thumbLabel name="rating" [(ngModel)]="review.ratingOne" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
           <!-- <form [formGroup]="form">
             <ngx-star-rating id="revrate" name="fieldName" ngDefaultControl formControlName="ratingReview"
               [(ngModel)]='review.ratingOne'></ngx-star-rating>
@@ -41,6 +39,6 @@
   
   <mat-label class="sample" type="text"> {{review.reviewTitle}}</mat-label><br>
   <mat-label class="sample" type="text">{{review.reviewText}}</mat-label><br>
-  <!-- <mat-label class="sample" type="text">{{form.value.ratingOne}}</mat-label><br> -->
+  <mat-label class="sample" type="text">{{review.ratingOne}}</mat-label><br>
   <mat-label class="sample" type="text">{{review.book}}</mat-label><br>
   <mat-label class="sample" type="text">{{review.user}}</mat-label><br>
