--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -102,10 +102,15 @@
     <div style="display: flex; align-items: right; justify-content: right;">
       <br>
       <button style="background-color: rgb(160, 160, 231); color: rgb(0, 0, 0);" mat-raised-button
-        (click)="viewBookReviews(selectedProducts.bookId)"> add Review </button>
+        (click)="addBookReview(selectedProducts.bookId)"> add Review </button>
       <button style="background-color: blue; color: burlywood;" mat-raised-button
         (click)="onCloseDisplayProduct()">Cancel</button>
     </div>
+<div><app-reviewcard id="mSliderDiv" *ngFor="let eachReview of reviews"   [review2]="eachReview"></app-reviewcard>
+
+
+</div>
+
   </mat-dialog-content>
 
 
