--- a/src/app/reviewcard/reviewcard.component.html
+++ b/src/app/reviewcard/reviewcard.component.html
@@ -1,9 +1,9 @@
 <div class="reviewdiv">
     <mat-card class="review-card">
       <mat-card-header>
-        <div mat-card-avatar>
-            <!-- <img [src]="book.image">  maybe ?? -->
-        </div>
+        <!-- <div mat-card-avatar>
+             <img [src]="book.image">  maybe ??
+        </div> -->
         <div>
           <mat-card-title>{{ review2.reviewTitle }}</mat-card-title>
           <mat-card-subtitle><br>
