adding some css

--- a/src/app/display-product-modal/display-product-modal.component.css
+++ b/src/app/display-product-modal/display-product-modal.component.css
@@ -3,9 +3,11 @@
   background-color: var(--background-tertiary);
   color: var(--foreground-quaternary);
   box-shadow: var(--background-tertiary-shadow);
-  width:800px;
+  width: 90%;
   /* height: 1000px; */
 }
+
+
 
 #mSliderDiv{
   background-color: var(--background-tertiary);
