--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -20,8 +20,14 @@
             <textarea name="fieldName" ngDefaultControl matInput id="revtext" [(ngModel)]='review.reviewText'></textarea>
             <br>
   
-<mat-label for="rating">Rating: </mat-label>       
-       <mat-slider thumbLabel name="rating" [(ngModel)]="review.ratingOne" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+<mat-label for="ratingOne">Plot Rating: </mat-label>       
+       <mat-slider thumbLabel name="ratingOne" [(ngModel)]="review.ratingOne" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+       <br>
+<mat-label for="ratingTwo"> Content Rating: </mat-label>       
+       <mat-slider thumbLabel name="ratingTwo" [(ngModel)]="review.ratingTwo" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+       <br>
+<mat-label for="ratingThree"> Time Rating: </mat-label>       
+       <mat-slider thumbLabel name="ratingThree" [(ngModel)]="review.ratingThree" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
           <!-- <form [formGroup]="form">
             <ngx-star-rating id="revrate" name="fieldName" ngDefaultControl formControlName="ratingReview"
               [(ngModel)]='review.ratingOne'></ngx-star-rating>
@@ -40,5 +46,7 @@
   <mat-label class="sample" type="text"> {{review.reviewTitle}}</mat-label><br>
   <mat-label class="sample" type="text">{{review.reviewText}}</mat-label><br>
   <mat-label class="sample" type="text">{{review.ratingOne}}</mat-label><br>
-  <mat-label class="sample" type="text">{{review.book}}</mat-label><br>
+  <mat-label class="sample" type="text">{{review.ratingTwo}}</mat-label><br>
+  <mat-label class="sample" type="text">{{review.ratingThree}}</mat-label><br>
+  <!-- <mat-label class="sample" type="text">{{review.book.bookId}}</mat-label><br> -->
   <mat-label class="sample" type="text">{{review.user}}</mat-label><br>
