display buttons on top and date age fixed not working

--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="reviewcard">
-    <button class="closedia" mat-button mat-dialog-close>x</button>
+    <button style="color:crimson" class="closedia" mat-button mat-dialog-close>X</button>
     <h2 ></h2>
   
     <div class="mat-typography">
