--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -134,7 +134,9 @@
 <br>
 <div>
  <h2 class="titleRev">{{ selectedProducts.bookName }} Reviews</h2>
- <app-reviewcard id="mSliderDiv" *ngFor="let eachReview of reviews"   [review2]="eachReview"></app-reviewcard></div>
+ <app-reviewcard id="mSliderDiv" *ngFor="let eachReview of reviews"   [review2]="eachReview">
+ </app-reviewcard>
+</div>
 
 
 </div>
