--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -7,6 +7,7 @@
         <mat-dialog-content>
           <div style="display: flex; align-items: right; justify-content: right;">
             <br>
+            <button *ngIf="quantity>0 " style="background-color: #F46036; margin-left: 1em ;  margin-right: 1em ;color: black;" mat-raised-button (click)="  onAddToCart(selectedProducts.bookId)" >Add To Cart</button>
             <button style="background-color: rgb(160, 160, 231); color: rgb(0, 0, 0);" mat-raised-button
               (click)="addBookReview(selectedProducts.bookId)"> Add Review </button> &nbsp;&nbsp;&nbsp;
             <button style="background-color: blue; color: burlywood;" mat-raised-button
@@ -89,15 +90,8 @@
             <option *ngIf="selectedProducts.quantityOnHand! >=6">6</option>
             <option *ngIf="selectedProducts.quantityOnHand! >=7">7</option>
             <option *ngIf="selectedProducts.quantityOnHand! >=8">8</option>
-            <!-- <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
-            <option>7</option>
-            <option>8</option>
-            <option>9</option>
-            <option>10</option> -->
+            <option *ngIf="selectedProducts.quantityOnHand! >=9">9</option>
+            <option *ngIf="selectedProducts.quantityOnHand! >=10">10</option>
           </select>
 
           <h2 *ngIf="selectedProducts.quantityOnHand! == 0">This book is out of stock.</h2>
@@ -126,14 +120,14 @@
         <br>
         
        
-        <button *ngIf="quantity>0 " style="background-color: #F46036; margin: 1em ; color: black;" mat-raised-button (click)="  onAddToCart(selectedProducts.bookId)" >Add To Cart</button>
+       
      </div>
     </mat-dialog-content>
 
-<br>
-<div>
+
+<div class  = "review-container">
  <h2 class="titleRev">{{ selectedProducts.bookName }} Reviews</h2>
- <app-reviewcard id="mSliderDiv" *ngFor="let eachReview of reviews"   [review2]="eachReview">
+ <app-reviewcard class="mSliderDiv mb-5" *ngFor="let eachReview of reviews"   [review2]="eachReview">
  </app-reviewcard>
 </div>
 
