--- a/src/app/reviewcard/reviewcard.component.css
+++ b/src/app/reviewcard/reviewcard.component.css
@@ -6,6 +6,7 @@
   box-shadow: var(--background-tertiary-shadow);
   width: 100%;
  text-align: center;
+ margin-bottom: 1em;
 }
 .reviewText{
   font-size:large;
