--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -13,29 +13,29 @@
         </tr>
       </thead>
       <tbody>
-        <ng-container *ngFor="let p of cart?.booksToBuy">
+        <ng-container *ngFor="let item of items">
           <tr>
             <td data-th="Product">
               <div class="row">
                 <div class="col-sm-2 hidden-xs">
-                  <img [src]="p.books.bookImage" class="img-responsive"/>
+                  <img [src]="item.bookImage" class="img-responsive"/>
                 </div>
                 <div class="col-sm-10">
-               <strong><h4 class="nomargin" style="font-weight: bolder; color: gray;text-align: center;" >{{ p.books.bookName }}</h4></strong>
-                  <p style="word-break: break-all; white-space: normal; font-weight: 520; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 32px;"  >{{p.books.synopsis}}</p>
+               <strong><h4 class="nomargin" style="font-weight: bolder; color: gray;text-align: center;" >{{ item.bookName }}</h4></strong>
+                  <!-- <p style="word-break: break-all; white-space: normal; font-weight: 520; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; margin: 32px;"  >{{p.books.synopsis}}</p> -->
                 </div>
               </div>
             </td>
-            <td data-th="Price">${{ p.books.bookPrice }}</td>
+            <td data-th="Price">${{ item.bookPrice }}</td>
             <!-- <div *ngIf="p.books.saleisActive === true">
               <h3>Sales Price: <span id="price">${{ (p.books.bookPrice - (p.books.bookPrice * p.books.saleDiscountRate)) | number:'1.2-2' }}</span></h3>
             </div> -->
-            <td data-th="Quantity">{{ p.quantityToBuy }}
+            <td data-th="Quantity">{{ item.quantityToBuy }}
             </td>
-            <td data-th="Total" class="text-center">${{ p.quantityToBuy * p.books.bookPrice }}</td>
+            <td data-th="Total" class="text-center">${{ item.quantityToBuy * item.books.bookPrice }}</td>
             <td class="actions" data-th="">
               <!-- <button class="btn btn-info btn-sm" (click)="refreshPage()" ><i class="fa fa-refresh"></i></button> -->
-              <button class="btn btn-danger btn-sm" (click)="onDeleteButtonClick(p.books.bookId)"><i class="fa fa-trash-o"></i></button>
+              <button class="btn btn-danger btn-sm" (click)="onDeleteButtonClick(item.bookId)"><i class="fa fa-trash-o"></i></button>
             </td>
 
           </tr>
