--- a/src/app/indexnavbar/indexnavbar.component.html
+++ b/src/app/indexnavbar/indexnavbar.component.html
@@ -21,6 +21,7 @@
       </div>
       <div class="nav-right">
         <div id="nav-tools">
+          <a routerLink="/home">Shop</a>
           <ng-container *ngIf="ableToSignUp">
             <a routerLink="/signup">Sign up</a>
           </ng-container>
