adding landing page finished

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,5 +9,33 @@
         <a routerLink="/home" class="btn btn-primary btn-lg mt-4 mb-4 border-btn">See our collection</a>
     </div>
 
+    <section class="six-grid width-container">
+        <div class="grid-item egg-item">
+  
+        </div>
+        <div class="grid-item text-item">
+          <h2 class="fw-900">Search through a variety</h2>
+          <p class="fw-600"> We have a significant library, so you are going to find what you are looking for, or perhaps discover something new.</p>
+          <a routerLink="/home"class="fw-900 transform-learn">Learn more</a>
+  
+        </div>
+        <div class="grid-item popsicle-item">
+  
+        </div>
+        <div class="grid-item text-item">
+          <h2 class="fw-900">Get lost in our collection</h2>
+          <p class="fw-600">We have a wide variety that you can choose from. Search throug our catalog and get lost in discovering something new.
+              Whether you want to discover about the world or go on a new adventure, Lost Chapter will take care of you. 
+          </p>
+          <a routerLink="/home" class="fw-900 stand-out-learn">Learn more</a>
+        </div>
+        <div class="grid-item bottom-text-item cherries">
+  
+        </div>
+        <div class="grid-item bottom-text-item orange">
+  
+        </div>
+
+      </section>
 
 </div>
