with guard and interceptor

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,7 +28,7 @@
         Invalid Credentials
       </div>
 
-      <button mat-flat-button color="primary" class="btn-block" id="login-button-logincomponent" (click)="onLoggedIn()">
+      <button mat-flat-button color="primary" class="btn-block" id="login-button-logincomponent" (click)="onLogIn()">
         Log in
       </button>
 
