adding the edit cart

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -30,15 +30,15 @@
             <!-- <div *ngIf="p.books.saleisActive === true">
               <h3>Sales Price: <span id="price">${{ (p.books.bookPrice - (p.books.bookPrice * p.books.saleDiscountRate)) | number:'1.2-2' }}</span></h3>
             </div> -->
-            <td data-th="Quantity"> 
+            <td data-th="Quantity" style="display:flex; align-items: center;"> 
               
-              {{ item.quantityToBuy }}
-            <!-- <span>
+              <!-- {{ item.quantityToBuy }} -->
+            
           
-              <button type="button"><i class="fa fa-minus"></i></button>
-              <input type="text" [value]="quantityToBuy">
-              <button type="button"><i class="fa fa-plus"></i></button>
-            </span>   -->
+              <button (click)="subQuantity(item.bookId, item.bookName, item.quantityToBuy, item.bookPrice, item.author, item.bookImage, item.quantityOnHand)" type="button"><i class="fa fa-minus"></i></button>
+                <p style=" margin-top: .5em; margin-left: .5em; margin-right: .5em; ">{{item.quantityToBuy}}</p>
+              <button  (click)="addQuantity(item.bookId, item.bookName, item.quantityToBuy, item.bookPrice, item.author, item.bookImage, item.quantityOnHand)" type="button"><i class="fa fa-plus"></i></button>
+   
             </td>
             
             <td data-th="Total" class="text-center">${{ (item.quantityToBuy * item.bookPrice).toFixed(2) }}</td>
