--- a/src/app/checkout-summary/checkout-summary.component.html
+++ b/src/app/checkout-summary/checkout-summary.component.html
@@ -16,7 +16,7 @@
           <label class="fs-5">Payment:  <h2><strong>${{showSummary?.totalPrice}}</strong></h2></label>
         </div>
       </div>
-      <button class="btn btn-warning" routerLink="/cart">
+      <button id="delete" class="btn btn-warning" routerLink="/cart">
         Continue shopping
       </button>
     </mat-card-content>
