--- a/src/app/display-product-modal/display-product-modal.component.html
+++ b/src/app/display-product-modal/display-product-modal.component.html
@@ -93,7 +93,7 @@
             <option *ngIf="selectedProducts.quantityOnHand! >=9">9</option>
             <option *ngIf="selectedProducts.quantityOnHand! >=10">10</option>
           </select>
-          <button *ngIf="quantity>0 " style="background-color: #F46036;  margin: 1em ;color: black;" mat-raised-button (click)="  onAddToCart(selectedProducts.bookId)" >Add To Cart</button>
+          <button id="add" *ngIf="quantity>0 " style="background-color: #F46036;  margin: 1em ;color: black;" mat-raised-button (click)="  onAddToCart(selectedProducts.bookId)" >Add To Cart</button>
 
 
           <h2 *ngIf="selectedProducts.quantityOnHand! == 0">This book is out of stock.</h2>
