--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,12 +10,12 @@
       <mat-card-content>
         <mat-form-field class="login-full-width">
           <input type="text" [(ngModel)]="username" matInput name="username" ngDefaultControl placeholder="Username"
-            id="username" />
+            id="username-login"/>
         </mat-form-field>
 
         <mat-form-field class="login-full-width">
           <input type="text" [(ngModel)]="password" matInput name="password" ngDefaultControl placeholder="Password"
-            [type]="hide ? 'password' : 'text'" id="password" required />
+            [type]="hide ? 'password' : 'text'" id="password-login" required />
           <mat-icon matSuffix (click)="hide = !hide">{{
             hide ? "visibility_off" : "visibility"
             }}</mat-icon>
@@ -23,7 +23,7 @@
       </mat-card-content>
 
       <!-- *ngIf="errorMessage" -->
-      <div  id="error-message" class="text-danger">
+      <div  id="error-login" class="text-danger">
         <!-- {{ errorMessage }} -->
         Invalid Credentials
       </div>
