--- a/src/app/indexnavbar/indexnavbar.component.html
+++ b/src/app/indexnavbar/indexnavbar.component.html
@@ -27,29 +27,29 @@
           <a routerLink="/cart">Cart</a>
         </div>
         
-        <!-- <ng-container *ngIf="ableToSignUp">
+        <ng-container *ngIf="ableToSignUp">
           <a routerLink="/signup">Sign up</a>
         </ng-container>
-        <ng-container *ngIf="ableToLogIn">
-          <a id="loginBtnHeader" routerLink="/login">Log in</a>
+        <ng-container>
+          <a  *ngIf="loggedIn; else user" (click)="this.loggedIn=!loggedIn" id="loginBtnHeader" routerLink="/login">Log in</a>
+        
+          <ng-template #user>
+            <button id="log-out-btn" routerLink="" (click)="logout()">Log Out</button>
+          </ng-template>
         </ng-container>
-        <ng-container *ngIf="loggedIn">
-          <button id="log-out-btn" routerLink="" (click)="logout()">Log Out</button>
-        </ng-container> -->
       <!-- Name and profile "button" (also the icon for the user) section below -->
       </div>
         <div class="p-3" *ngIf="loggedIn" id="profile-buttons">
           <a routerLink="/userprofile"> <p class="text-white">{{currentUser}}</p></a>
           
-            <span id="user">
+            <!-- <span id="user">
               <a class="btn btn-outline-info nav-link"role="button" *ngIf="!loggedIn; else user2" (click)="this.ableToLogIn=!this.ableToLogIn" id="login" routerLink="login" >Show Login </a>
               <ng-template #user2>
                 {{ loggedIn }}
-                <a class="btn btn-outline-info " (click)="logOut()" id="logout" role="button" style="margin: 2px;" >Log Out </a>
+                <a class="btn btn-outline-info " (click)="logout()" id="logout" role="button" style="margin: 2px;" >Log Out </a>
               </ng-template>
-            </span>
-          </div>
-        </div>
+            </span> -->
+          
           <!-- replace above with probably something like {{user.username}} -->
         </div>
         <div class="p-3" *ngIf="notLoggedIn" id="profile-buttons">
