--- a/src/app/indexnavbar/indexnavbar.component.html
+++ b/src/app/indexnavbar/indexnavbar.component.html
@@ -22,37 +22,34 @@
       <div class="nav-right">
         <div id="nav-tools">
           <a routerLink="/home">Shop</a>
-          <!-- <a routerLink="/wishlist">Wishlist</a> -->
+          <ng-container *ngIf="ableToSignUp">
+            <a routerLink="/signup">Sign up</a>
+          </ng-container>
+          <ng-container>
+            <a  *ngIf="!loggedIn; else user" (click)="this.loggedIn=!loggedIn" id="loginBtnHeader" routerLink="/login">Log in</a>
+            <ng-template  #user>
+              <button *ngIf="loggedIn" id="log-out-btn" routerLink="" (click)="logout()">Log Out</button>
+            </ng-template>
+          </ng-container>
+          <!-- <a routerLink="/wishlist">Wishlist</a>
+          <ng-container *ngIf="ableToLogIn">
+            <a id="loginBtnHeader" routerLink="/login">Log in</a>
+          </ng-container> -->
+          <!-- <ng-container *ngIf="loggedIn">
+            <button id="log-out-btn" routerLink="" (click)="logout()">Log Out</button>
+          </ng-container> -->
           <!-- Changed routerLink above from routerLink="" to routerLink="/login"  -->
           <a routerLink="/cart">Cart</a>
         </div>
-        
-        <ng-container *ngIf="ableToSignUp">
-          <a routerLink="/signup">Sign up</a>
-        </ng-container>
-        <ng-container>
-          <a  *ngIf="loggedIn; else user" (click)="this.loggedIn=!loggedIn" id="loginBtnHeader" routerLink="/login">Log in</a>
-        
-          <ng-template #user>
-            <button id="log-out-btn" routerLink="" (click)="logout()">Log Out</button>
-          </ng-template>
-        </ng-container>
+
       <!-- Name and profile "button" (also the icon for the user) section below -->
       </div>
         <div class="p-3" *ngIf="loggedIn" id="profile-buttons">
           <a routerLink="/userprofile"> <p class="text-white">{{currentUser}}</p></a>
-          
-            <!-- <span id="user">
-              <a class="btn btn-outline-info nav-link"role="button" *ngIf="!loggedIn; else user2" (click)="this.ableToLogIn=!this.ableToLogIn" id="login" routerLink="login" >Show Login </a>
-              <ng-template #user2>
-                {{ loggedIn }}
-                <a class="btn btn-outline-info " (click)="logout()" id="logout" role="button" style="margin: 2px;" >Log Out </a>
-              </ng-template>
-            </span> -->
-          
-          <!-- replace above with probably something like {{user.username}} -->
+
+          <!-- replace above with probably something like {{user.username}}}} -->
         </div>
-        <div class="p-3" *ngIf="notLoggedIn" id="profile-buttons">
+        <div class="p-3" *ngIf="!loggedIn" id="profile-buttons">
           <p class="text-info" routerLink="/login">Sign in now</p>
         </div>
 
