--- a/src/app/featured-products/featured-products.component.html
+++ b/src/app/featured-products/featured-products.component.html
@@ -6,10 +6,10 @@
   <div slickContainer #slickController="slick" [slickConfig]="config" >
     <ng-container *ngIf="slickController.initialize" >
       <div style = "cursor: pointer; display:flex; justify-content: center; flex-direction: column; align-items: center; margin: .5em;" class = "featured-item" slickItem *ngFor="let item of showResults">
-            <img [src]="item.bookImage"  (click)="onDisplayProduct(item)" style="border-radius: 8px;width: 200px; height: 200px; " class="p-10 mb-2">
+            <img id="product" [src]="item.bookImage"  (click)="onDisplayProduct(item)" style="border-radius: 8px;width: 200px; height: 200px; " class="p-10 mb-2">
         
 
-          <div id="product"
+          <div
           style="margin: auto; color: black;"><strong>Book Title: </strong> {{item.bookName}} <br>
 
          </div>
