--- a/src/app/review/review.component.html
+++ b/src/app/review/review.component.html
@@ -21,13 +21,13 @@
             <br>
   
 <mat-label for="ratingOne">Plot Rating: </mat-label>       
-       <mat-slider thumbLabel name="ratingOne" [(ngModel)]="review.ratingOne" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+       <mat-slider id="slider1" thumbLabel name="ratingOne" [(ngModel)]="review.ratingOne" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
        <br>
 <mat-label for="ratingTwo"> Content Rating: </mat-label>       
-       <mat-slider thumbLabel name="ratingTwo" [(ngModel)]="review.ratingTwo" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+       <mat-slider id="slider2" thumbLabel name="ratingTwo" [(ngModel)]="review.ratingTwo" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
        <br>
 <mat-label for="ratingThree"> Time Rating: </mat-label>       
-       <mat-slider thumbLabel name="ratingThree" [(ngModel)]="review.ratingThree" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
+       <mat-slider id="slider3" thumbLabel name="ratingThree" [(ngModel)]="review.ratingThree" tickInterval="1" step="1" min="0" max="5" aria-label="units"></mat-slider>
           <!-- <form [formGroup]="form">
             <ngx-star-rating id="revrate" name="fieldName" ngDefaultControl formControlName="ratingReview"
               [(ngModel)]='review.ratingOne'></ngx-star-rating>
