--- a/src/app/indexnavbar/indexnavbar.component.html
+++ b/src/app/indexnavbar/indexnavbar.component.html
@@ -48,7 +48,7 @@
       <!-- Name and profile "button" (also the icon for the user) section below -->
       </div>
         <div class="p-3" *ngIf="loggedIn" id="profile-buttons">
-          <a routerLink="/userprofile"> <p class="text-white">{{currentUser}}</p></a>
+          <a routerLink="/userprofile"> <p id="navbar-username"class="text-white">{{currentUser}}</p></a>
 
           <!-- replace above with probably something like {{user.username}}}} -->
         </div>
