added id's and a bit of carlo code

--- a/src/app/featured-products/featured-products.component.html
+++ b/src/app/featured-products/featured-products.component.html
@@ -9,7 +9,7 @@
             <img id="product" [src]="item.bookImage"  (click)="onDisplayProduct(item)" style="border-radius: 8px;width: 200px; height: 200px; " class="p-10 mb-2">
         
 
-          <div
+          <div id="featuredbooks"
           style="margin: auto; color: black;"><strong>Book Title: </strong> {{item.bookName}} <br>
 
          </div>
